Add alt attributes value + minor fixes

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
     <header class="sticky-top">
         <div class="sony-navbar d-flex justify-content-end p-2 bg-black">
-            <img class="d-block img-fluid" src="img/sony_logo.svg" alt="">
+            <img class="d-block img-fluid" src="img/sony_logo.svg" alt="Logo Sony">
         </div>
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary fw-semibold">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img class="d-block img-fluid" src="./img/play_logo.svg" alt="">
+                    <img class="d-block img-fluid" src="./img/play_logo.svg" alt="Logo PlayStation">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -102,7 +102,7 @@
                     </li>
                     </ul>
                     <button class="btn btn-dark rounded-5">Accedi</button>
-                    <img src="./img/lens.svg" alt="">
+                    <img src="./img/lens.svg" alt="Icona search">
                 </div>
                 </div>
             </div>
@@ -129,22 +129,22 @@
             <div class="container my-4">
                 <div class="row g-4">
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img class="thumb d-block img-fluid rounded-4" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-4" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Copertina di gioco di Returnal">
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img class="thumb d-block img-fluid rounded-4" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-4" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Copertina di gioco di Returnal">
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img class="thumb d-block img-fluid rounded-4" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-4" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Copertina di gioco di Returnal">
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                       <img class="thumb d-block img-fluid rounded-4" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                       <img class="thumb d-block img-fluid rounded-4" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Copertina di gioco di Returnal">
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                       <img class="thumb d-block img-fluid rounded-4" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                       <img class="thumb d-block img-fluid rounded-4" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Copertina di gioco di Returnal">
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img class="thumb d-block img-fluid rounded-4" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-4" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Copertina di gioco di Returnal">
                     </div>
                 </div>
             </div>
@@ -168,29 +168,29 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6">
-                        <img class="d-block img-fluid " src="img/playstation-5-thumb.png" alt="">
+                        <img class="d-block img-fluid " src="img/playstation-5-thumb.png" alt="Console PlayStation 5">
                     </div>
                 </div>
 
                 <div class="row row-cols-md-5 g-3 my-5 text-center">
                     <div class="device col-4">
-                        <img  class="d-block img-fluid" src="./img/playstation-5-thumb.png" alt="">
+                        <img  class="d-block img-fluid" src="./img/playstation-5-thumb.png" alt="Console PlayStation 5">
                         <h5 class="d-none d-md-block fs-6">Console PS5</h5>
                     </div>
                     <div class="device col-4">
-                        <img  class="d-block img-fluid" src="./img/joypad-thumb.png" alt="">
+                        <img  class="d-block img-fluid" src="./img/joypad-thumb.png" alt="Controller Wireless">
                         <h5 class="d-none d-md-block fs-6">Controller Wireless<br>DualSense&trade;</h5>
                     </div>
                     <div class="device col-4">
-                        <img  class="d-block img-fluid" src="./img/headset-thumb.png" alt="">
-                        <h5 class="d-none d-md-block fs-6">Cuffie Wireless<br>con microfoon<br>PULSE 3&trade;</h5>
+                        <img  class="d-block img-fluid" src="./img/headset-thumb.png" alt="Cuffie Wireless con microfono PULSE 3">
+                        <h5 class="d-none d-md-block fs-6">Cuffie Wireless<br>con microfono PULSE 3&trade;</h5>
                     </div>
                     <div class="device col-4">
-                        <img  class="d-block img-fluid" src="./img/remote-thumb.png" alt="">
+                        <img  class="d-block img-fluid" src="./img/remote-thumb.png" alt="Telecomando Media">
                         <h5 class="d-none d-md-block fs-6">Telecomando<br>Media</h5>
                     </div>
                     <div class="device col-4">
-                        <img  class="d-block img-fluid" src="./img/camera-thumb.jpg" alt="">
+                        <img  class="d-block img-fluid" src="./img/camera-thumb.jpg" alt="Telecamera HD">
                         <h5 class="d-none d-md-block fs-6">Telecamera HD</h5>
                     </div>
                 </div>
@@ -217,52 +217,52 @@
                 <h4 class="fs-5 my-4">Giochi incredibili per PS4 e PS5 disponibili ora</h4>
                 <div class="row g-4 text-center pb-4">
                     <div class="col-4 col-lg-2">
-                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Copertina di gioco di Crash Bandicoot 4: It's about time!">
                         <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
                     </div>
                     <div class="col-4 col-lg-2">
-                        <img class="thumb d-block img-fluid rounded-5" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Copertina di gioco di Tony Hawk's Pro Skater 1-2">
+                        <h5 class="fs-6 my-2">Tony Hawk's Pro Skater 1-2</h5>
+                    </div>
+                    <div class="col-4 col-lg-2">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Copertina di gioco di Crash Bandicoot 4: It's about time!">
                         <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
                     </div>
                     <div class="col-4 col-lg-2">
-                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Copertina di gioco di Tony Hawk's Pro Skater 1-2">
+                        <h5 class="fs-6 my-2">Tony Hawk's Pro Skater 1-2</h5>
+                    </div>
+                    <div class="col-4 col-lg-2">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Copertina di gioco di Crash Bandicoot 4: It's about time!">
                         <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
                     </div>
                     <div class="col-4 col-lg-2">
-                        <img class="thumb d-block img-fluid rounded-5" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Copertina di gioco di Tony Hawk's Pro Skater 1-2">
+                        <h5 class="fs-6 my-2">Tony Hawk's Pro Skater 1-2</h5>
+                    </div>
+                    <div class="col-4 col-lg-2">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Copertina di gioco di Crash Bandicoot 4: It's about time!">
                         <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
                     </div>
                     <div class="col-4 col-lg-2">
-                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Copertina di gioco di Tony Hawk's Pro Skater 1-2">
+                        <h5 class="fs-6 my-2">Tony Hawk's Pro Skater 1-2</h5>
+                    </div>
+                    <div class="col-4 col-lg-2">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Copertina di gioco di Crash Bandicoot 4: It's about time!">
                         <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
                     </div>
                     <div class="col-4 col-lg-2">
-                        <img class="thumb d-block img-fluid rounded-5" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Copertina di gioco di Tony Hawk's Pro Skater 1-2">
+                        <h5 class="fs-6 my-2">Tony Hawk's Pro Skater 1-2</h5>
+                    </div>
+                    <div class="col-4 col-lg-2">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Copertina di gioco di Crash Bandicoot 4: It's about time!">
                         <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
                     </div>
                     <div class="col-4 col-lg-2">
-                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
-                        <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
-                    </div>
-                    <div class="col-4 col-lg-2">
-                        <img class="thumb d-block img-fluid rounded-5" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
-                        <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
-                    </div>
-                    <div class="col-4 col-lg-2">
-                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
-                        <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
-                    </div>
-                    <div class="col-4 col-lg-2">
-                        <img class="thumb d-block img-fluid rounded-5" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
-                        <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
-                    </div>
-                    <div class="col-4 col-lg-2">
-                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
-                        <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
-                    </div>
-                    <div class="col-4 col-lg-2">
-                        <img class="thumb d-block img-fluid rounded-5" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
-                        <h5 class="thumb fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Copertina di gioco di Tony Hawk's Pro Skater 1-2">
+                        <h5 class="thumb fs-6 my-2">Tony Hawk's Pro Skater 1-2</h5>
                     </div>
                 </div>
             </div>
@@ -302,16 +302,16 @@
          </section>
 
          <!-- Sezione PS-Plus-->
-         <section id="ps-plus" class="mb-4">
+         <section id="ps-plus">
             <div class="container">
                     <div class="row align-items-center">
                     <div class="col-md-6 py-5 py-md-0">            
-                        <img class="d-block img-fluid" src="img/ps-plus-logo.png" alt="">
+                        <img class="d-block img-fluid" src="img/ps-plus-logo.png" alt="Logo PlayStation Plus">
                         <p class="fs-6 fw-semibold">Migliora la tua esperienza PlayStation con l'accesso a multiigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
                         <button class="btn btn-light text-primary fw-semibold rounded-5 mb-2">Esplora PlayStation Plus</button>
                     </div>
                     <div class="col-md-6">
-                         <img class="d-none d-md-block img-fluid" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt=""> <!-- L'immagine compare da md in poi-->
+                         <img class="d-none d-md-block img-fluid" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="Giochi del mese di PlayStaiton Plus"> 
                     </div>
                 </div>
              </div>
@@ -319,7 +319,7 @@
 
         <!-- Sezione sconti -->
          <section id="discount">
-            <div class="container">
+            <div class="container my-5">
                 <div class="discount-titles text-center">
                     <h2 class="fs-1">Nuovi sconti sul PlayStation Store</h2>
                     <p class="fs-5 text-secondary fw-semibold my-4">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto</p>
@@ -327,13 +327,13 @@
 
                 <div class="row g-4 my-5">
                     <div class="scale-fx col-12 col-md-4">
-                        <img class="d-block img-fluid" src="./img/playstation-store-games-under-20-spotlight.jpg" alt="">
+                        <img class="d-block img-fluid" src="./img/playstation-store-games-under-20-spotlight.jpg" alt="Banner sconto giochi under 20">
                     </div>
                     <div class="scale-fx col-12 col-md-4">
-                        <img class="d-block img-fluid" src="./img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
+                        <img class="d-block img-fluid" src="./img/playstation-store-golden-week-sale-spotlight.jpg" alt="Banner sconto golden week">
                     </div>
                     <div class="scale-fx col-12 col-md-4">
-                        <img class="d-block img-fluid" src="./img/playstation-store-free-to-play-spotlight.png" alt="">
+                        <img class="d-block img-fluid" src="./img/playstation-store-free-to-play-spotlight.png" alt="Banner store free to play">
                     </div>
                 </div>
             </div>
@@ -344,12 +344,12 @@
             <div class="container my-5">
                 <div class="row align-items-center">
                     <div class="col-md-6 py-5 py-md-0">
-                        <img class="d-block img-fluid mb-4" src="img/ps-now-logo-two-column.png" alt="">
+                        <img class="d-block img-fluid mb-4" src="img/ps-now-logo-two-column.png" alt="Logo PlayStation Now">
                         <p class="fs-6 fw-semibold">Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.</p>
                         <button class="btn btn-light fw-semibold rounded-5 mb-2">Esplora PlayStation Now</button>
                     </div>
                     <div class="col-md-6">
-                        <img class="d-none d-md-block img-fluid" src="./img/ps-now-april-featured-image-block.png" alt=""> <!-- L'immagine compare da md in poi-->
+                        <img class="d-none d-md-block img-fluid" src="./img/ps-now-april-featured-image-block.png" alt="Giochi del mese di PlayStation Now">
                     </div>
                 </div>
             </div>
@@ -381,9 +381,9 @@
         <div class="container">
             <div class="row my-4">
                 <div class="col-12 col-lg-6">
-                        <img class="d-block img-fluid" src="./img/ps-footer.svg" alt="">
+                        <img class="d-block img-fluid" src="./img/ps-footer.svg" alt="Logo PlayStation">
                         <div class="d-flex align-items-center my-5">
-                        <img src="./img/language-globe.svg" alt="">
+                        <img class="d-block" src="./img/language-globe.svg" alt="Icona Linguaggio\Paese">
                         <span class="ps-2">Country / Region: Italy</span>
                     </div>
                 </div>
@@ -414,8 +414,12 @@
             </div>
 
             <div class="disclaimer">
-                <img class="d-block" src="./img/sie-logo.svg" alt="">
-                <p class="my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ab eaque dolorem vel necessitatibus! Aut nobis rerum debitis iste ducimus itaque, sit sed quod iusto perferendis. Expedita dolor magni minima?</p>
+                <img class="d-block" src="./img/sie-logo.svg" alt="Logo Sony Interactive">
+                <p class="my-4 fw-semibold">Website &copy;2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi
+                                dei giochi, nomi commerciali e/o di abbigliamenti, marchi registrati, grafica e immagini associati
+                                sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti
+                                riservati. <a class="fw-semibold" href="#">Maggiori informazioni</a>
+                </p>
             </div>
 
         </div>
