--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="highlight-jumbo">
                     <div class="highlight-jumbo-contents container text-white d-flex align-items-end pb-5">
                       <div class="jumbo-internal-container">
-                        <img class="my-4" src="./img/returnal-hero-banner-logo.png" alt="Returnal Game logo">
+                        <img class="my-4" src="./img/returnal-hero-banner-logo.png" alt="Logo Returnal">
                         <h2 class="fs-1 my-2">Rompi il cerchio</h2>
                         <p class="my-5">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo
                             thriller fantascientifico, disponibile in esclusiva su PS5.
@@ -202,7 +202,7 @@
             <div class="new-publications-jumbo">
                     <div class="new-publications-jumbo-contents container text-white d-flex align-items-center gap-5">
                       <div class="jumbo-internal-container">
-                      <img class="my-4" src="./img/it-takes-two-logo.png" alt="It takes two game logo">
+                      <img class="my-4" src="./img/it-takes-two-logo.png" alt="Logo It takes two">
                       <h2 class="fs-1 my-2">Rompi il cerchio</h2>
                       <p class="my-5">Trova un amico e partite insieme per l'avventura più folle delle vostre vite in "It Takes Two", 
                                       un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere
