--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="container my-4">
                 <div class="row g-4">
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img class="thumb d-block img-fluid rounded-4" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Copertina di gioco di Returnal">
+                        <img class="thumb-active d-block img-fluid rounded-4" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Copertina di gioco di Returnal">
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
                         <img class="thumb d-block img-fluid rounded-4" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Copertina di gioco di Returnal">
@@ -303,18 +303,18 @@
 
          <!-- Sezione PS-Plus-->
          <section id="ps-plus">
-            <div class="container">
-                    <div class="row align-items-center">
-                    <div class="col-md-6 py-5 py-md-0">            
-                        <img class="d-block img-fluid" src="img/ps-plus-logo.png" alt="Logo PlayStation Plus">
-                        <p class="fs-6 fw-semibold">Migliora la tua esperienza PlayStation con l'accesso a multiigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
-                        <button class="btn btn-light text-primary fw-semibold rounded-5 mb-2">Esplora PlayStation Plus</button>
-                    </div>
-                    <div class="col-md-6">
-                         <img class="d-none d-md-block img-fluid" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="Giochi del mese di PlayStaiton Plus"> 
-                    </div>
+            <div class="container d-flex justify-content-between">
+                <div class="ps-plus-left-column d-flex flex-column justify-content-center gap-3 align-items-start">
+                    <img src="./img/ps-plus-logo.png" alt="Logo PlayStation Plus">
+                    <p class="fs-5 fw-semibold">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti 
+                        esclusivi e altro ancora.
+                    </p>
+                    <button class="btn btn-light text-primary fw-semibold rounded-5">Esplora PlayStation Plus</button>
                 </div>
-             </div>
+                <div class="ps-plus-right-column d-none d-lg-block">
+                    <img class="d-non d-md-block" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="Giochi del mese di PlayStaiton Plus">
+                </div>
+            </div>
          </section>
 
         <!-- Sezione sconti -->
@@ -341,16 +341,16 @@
 
         <!-- Sezione PS-Now -->
         <section id="ps-now" class="text-white">
-            <div class="container my-5">
-                <div class="row align-items-center">
-                    <div class="col-md-6 py-5 py-md-0">
-                        <img class="d-block img-fluid mb-4" src="img/ps-now-logo-two-column.png" alt="Logo PlayStation Now">
-                        <p class="fs-6 fw-semibold">Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.</p>
-                        <button class="btn btn-light fw-semibold rounded-5 mb-2">Esplora PlayStation Now</button>
-                    </div>
-                    <div class="col-md-6">
-                        <img class="d-none d-md-block img-fluid" src="./img/ps-now-april-featured-image-block.png" alt="Giochi del mese di PlayStation Now">
-                    </div>
+              <div class="container d-flex justify-content-between text-white">
+                <div class="ps-now-left-column d-flex flex-column justify-content-center gap-3 align-items-start">
+                    <img src="./img/ps-now-logo-two-column.png" alt="Logo PlayStation Plus">
+                    <p class="fs-5 fw-semibold">Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, 
+                        PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.
+                    </p>
+                    <button class="btn btn-light text-dark fw-semibold rounded-5">Esplora PlayStation Now</button>
+                </div>
+                <div class="ps-now-right-column d-none d-lg-block">
+                    <img class="d-non d-md-block" src="./img/ps-now-april-featured-image-block.png" alt="Giochi del mese di PlayStaiton Plus">
                 </div>
             </div>
         </section>
