More fixes to CSS effects

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                       <div class="jumbo-internal-container">
                         <img class="my-4" src="./img/returnal-hero-banner-logo.png" alt="Logo Returnal">
                         <h2 class="fs-1 my-2">Rompi il cerchio</h2>
-                        <p class="my-5">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo
+                        <p class="fw-semibold my-5">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo
                             thriller fantascientifico, disponibile in esclusiva su PS5.
                         </p>
                         <button class="btn rounded-5 btn-danger">Acquista ora</button>
@@ -173,7 +173,7 @@
                 </div>
 
                 <div class="row row-cols-md-5 g-3 my-5 text-center">
-                    <div class="device col-4">
+                    <div class="device-active col-4">
                         <img  class="d-block img-fluid" src="./img/playstation-5-thumb.png" alt="Console PlayStation 5">
                         <h5 class="d-none d-md-block fs-6">Console PS5</h5>
                     </div>
@@ -203,8 +203,8 @@
                     <div class="new-publications-jumbo-contents container text-white d-flex align-items-center gap-5">
                       <div class="jumbo-internal-container">
                       <img class="my-4" src="./img/it-takes-two-logo.png" alt="Logo It takes two">
-                      <h2 class="fs-1 my-2">Rompi il cerchio</h2>
-                      <p class="my-5">Trova un amico e partite insieme per l'avventura più folle delle vostre vite in "It Takes Two", 
+                      <h2 class="fs-1 my-2">Un'avventura cooperativa selvaggia ti attende</h2>
+                      <p class="fw-semibold my-5">Trova un amico e partite insieme per l'avventura più folle delle vostre vite in "It Takes Two", 
                                       un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere
                       </p>
                       <button class="btn rounded-5 btn-danger">Acquista ora</button>
