Minor fix to navbar search icon

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     </li>
                     </ul>
                     <button class="btn btn-dark rounded-5">Accedi</button>
-                    <img src="./img/lens.svg" alt="Icona search">
+                    <a href="#"><img src="./img/lens.svg" alt="Icona search"></a>
                 </div>
                 </div>
             </div>
